--- a/make_payment_api.yaml
+++ b/make_payment_api.yaml
@@ -2,13 +2,13 @@
 
 #Define openapi version
 openapi: 3.0.3
-#List file description
+#File description
 info:
   title: Movie Ticket Payment API
   description: API for processing movie ticket payments in an online booking system.
   version: 1.0.0
 
-
+#API endpoint to make a payment
 paths:
   /payments:
     post:
@@ -47,7 +47,7 @@ paths:
                       type: string
                       description: Type of payment method
                     details:
-                      type: object
+                      type: object # card number, expiry, etc
                       description: Payment details
                 totalAmount:
                   type: number
@@ -57,8 +57,8 @@ paths:
         '200':
           description: Payment successful
         '400':
-          description: Invalid request
+          description: Invalid request # missing fields or invalid payment method etc
         '402':
-          description: Payment failed
+          description: Payment failed # insufficient funds etc
         '500':
           description: Server error during payment processing
